test/failed-1/secret/lists/ill-typed/ambiguous-list-type-isempty.stella
// ERROR_AMBIGUOUS_LIST_TYPE
language core;
extend with #lists;


fn main(n : Nat) -> Bool {
  return List::isempty([])
}
